--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineHeader/ActivityTimelineHeader.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineHeader/ActivityTimelineHeader.xib
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaMed.ttf">
-            <string>TurkcellSaturaMed</string>
+        <array key="GT-America-LC-Standard-Medium.otf">
+            <string>GTAmericaLC-Md</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ActivityTimelineHeader" customModule="Depo_LifeTech" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ActivityTimelineHeader" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="389" height="61"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9NW-qL-eHb">
-                    <rect key="frame" x="0.0" y="0.0" width="106" height="39"/>
+                    <rect key="frame" x="0.0" y="0.0" width="106" height="41.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qdQ-dK-kvu">
-                    <rect key="frame" x="14" y="22" width="84" height="17"/>
-                    <fontDescription key="fontDescription" name="TurkcellSaturaMed" family="TurkcellSaturaMed" pointSize="17"/>
+                    <rect key="frame" x="14" y="20" width="84" height="21.5"/>
+                    <fontDescription key="fontDescription" name="GTAmericaLC-Md" family="GT America LC" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mdz-gi-bmd" customClass="RingView" customModule="Depo_LifeTech" customModuleProvider="target">
-                    <rect key="frame" x="106" y="18" width="24" height="24"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mdz-gi-bmd" customClass="RingView" customModule="lifeBox_Business" customModuleProvider="target">
+                    <rect key="frame" x="106" y="18.5" width="24" height="24"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="24" id="Fat-ev-CCV"/>
