--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/OptIn/OptInController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/OptIn/OptInController.xib
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaBol.ttf">
-            <string>TurkcellSaturaBol</string>
+        <array key="GT-America-LC-Standard-Bold.otf">
+            <string>GTAmericaLC-Bd</string>
         </array>
-        <array key="TurkcellSaturaReg.ttf">
-            <string>TurkcellSaturaReg</string>
+        <array key="GT-America-LC-Standard-Regular.otf">
+            <string>GTAmericaLC-Rg</string>
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OptInController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OptInController" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
                 <outlet property="bottomTimerConstraint" destination="MFF-iG-yKj" id="vZz-dG-dfw"/>
                 <outlet property="errorLabel" destination="bPL-kc-zIb" id="RmU-Zc-2X5"/>
@@ -34,84 +36,78 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lk3-xr-W1F">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="aSF-6O-aqT">
-                            <rect key="frame" x="40" y="35" width="295" height="59"/>
+                            <rect key="frame" x="40" y="35" width="334" height="62"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Verify Your Phone Number" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGG-wE-D77">
-                                    <rect key="frame" x="36" y="0.0" width="223.5" height="22.5"/>
-                                    <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="19"/>
+                                    <rect key="frame" x="48.5" y="0.0" width="237" height="24"/>
+                                    <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="19"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter the verification code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mka-ez-sxo">
-                                    <rect key="frame" x="36.5" y="36.5" width="222.5" height="22.5"/>
-                                    <fontDescription key="fontDescription" name="TurkcellSaturaReg" family="TurkcellSaturaReg" pointSize="19"/>
+                                    <rect key="frame" x="56.5" y="38" width="221" height="24"/>
+                                    <fontDescription key="fontDescription" name="GTAmericaLC-Rg" family="GT America LC" pointSize="19"/>
                                     <color key="textColor" red="1" green="0.94117647059999998" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="rSg-mH-2dh">
-                            <rect key="frame" x="67.5" y="130" width="240" height="50"/>
+                            <rect key="frame" x="87" y="133" width="240" height="50"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="65g-mO-kbV" customClass="SecurityCodeTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="65g-mO-kbV" customClass="SecurityCodeTextField" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="30" height="50"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="cd0-ly-9NI"/>
                                         <constraint firstAttribute="width" constant="30" id="tUX-Ad-6qD"/>
                                     </constraints>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="xBQ-Iv-ryS"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xgk-JU-ejZ" customClass="SecurityCodeTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xgk-JU-ejZ" customClass="SecurityCodeTextField" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="42" y="0.0" width="30" height="50"/>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="nR9-RB-e7Y"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P4g-ji-t68" customClass="SecurityCodeTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P4g-ji-t68" customClass="SecurityCodeTextField" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="84" y="0.0" width="30" height="50"/>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="HdE-hn-dlk"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vog-YO-3D0" customClass="SecurityCodeTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vog-YO-3D0" customClass="SecurityCodeTextField" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="126" y="0.0" width="30" height="50"/>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="xsS-Lg-dBf"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ya2-vh-eoh" customClass="SecurityCodeTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ya2-vh-eoh" customClass="SecurityCodeTextField" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="168" y="0.0" width="30" height="50"/>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="nVj-GJ-uEM"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hTc-6J-8w5" customClass="SecurityCodeTextField" customModule="lifebox" customModuleProvider="target">
+                                <textField opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hTc-6J-8w5" customClass="SecurityCodeTextField" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="210" y="0.0" width="30" height="50"/>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
@@ -120,17 +116,17 @@
                                 </textField>
                             </subviews>
                         </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PmZ-10-YKt">
-                            <rect key="frame" x="67.5" y="130" width="240" height="50"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PmZ-10-YKt">
+                            <rect key="frame" x="87" y="133" width="240" height="50"/>
                         </button>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bPL-kc-zIb">
-                            <rect key="frame" x="38" y="200" width="299" height="20.5"/>
+                            <rect key="frame" x="38" y="203" width="338" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mTW-7e-VLA" customClass="RoundedInsetsButton" customModule="lifebox" customModuleProvider="target">
-                            <rect key="frame" x="84.5" y="244.5" width="206" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mTW-7e-VLA" customClass="RoundedInsetsButton" customModule="lifeBox_Business" customModuleProvider="target">
+                            <rect key="frame" x="93" y="247.5" width="228" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="vsW-dt-Ckd"/>
                             </constraints>
@@ -139,9 +135,9 @@
                                 <action selector="actionResendButton:" destination="-1" eventType="touchUpInside" id="MtI-uD-ClX"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLT-WU-fTZ" customClass="SmartTimerLabel" customModule="lifebox" customModuleProvider="target">
-                            <rect key="frame" x="148.5" y="536" width="78" height="47"/>
-                            <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="40"/>
+                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLT-WU-fTZ" customClass="SmartTimerLabel" customModule="lifeBox_Business" customModuleProvider="target">
+                            <rect key="frame" x="161" y="703.5" width="92" height="50.5"/>
+                            <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="40"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -172,6 +168,7 @@
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="CYc-xl-rPs"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="CYc-xl-rPs" firstAttribute="bottom" secondItem="lk3-xr-W1F" secondAttribute="bottom" id="5zi-xn-iDP"/>
@@ -180,7 +177,6 @@
                 <constraint firstItem="CYc-xl-rPs" firstAttribute="trailing" secondItem="lk3-xr-W1F" secondAttribute="trailing" id="xE9-eB-9Vs"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="CYc-xl-rPs"/>
             <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
     </objects>
