--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Turkcell_Satura_Bold.ttf">
-            <string>TurkcellSatura-Bold</string>
+        <array key="GT-America-LC-Standard-Bold.otf">
+            <string>GTAmericaLC-Bd</string>
         </array>
-        <array key="Turkcell_Satura_Regular.ttf">
-            <string>TurkcellSatura</string>
+        <array key="GT-America-LC-Standard-Regular.otf">
+            <string>GTAmericaLC-Rg</string>
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
                 <outlet property="captchaView" destination="BRt-og-nfn" id="ant-Eq-wTX"/>
                 <outlet property="emailTextField" destination="gqV-qq-vPq" id="GVO-WG-WqB"/>
@@ -36,55 +34,54 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UVa-ce-PgV">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jzz-bl-nJl">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="68" translatesAutoresizingMaskIntoConstraints="NO" id="Uj0-i2-5yg">
-                                    <rect key="frame" x="20" y="20" width="335" height="103.5"/>
+                                    <rect key="frame" x="20" y="20" width="335" height="110"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oXy-X7-p5o">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="19"/>
-                                            <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="23"/>
+                                            <fontDescription key="fontDescription" name="GTAmericaLC-Rg" family="GT America LC" pointSize="18"/>
                                             <color key="textColor" red="0.54509803921568623" green="0.5607843137254902" blue="0.64313725490196072" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTs-IA-6N1">
-                                            <rect key="frame" x="0.0" y="87" width="335" height="16.5"/>
-                                            <fontDescription key="fontDescription" name="TurkcellSatura-Bold" family="Turkcell Satura" pointSize="15"/>
+                                            <rect key="frame" x="0.0" y="91" width="335" height="19"/>
+                                            <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzH-eK-Hm6">
-                                    <rect key="frame" x="20" y="133.5" width="335" height="19"/>
-                                    <fontDescription key="fontDescription" name="TurkcellSatura-Bold" family="Turkcell Satura" pointSize="17"/>
+                                    <rect key="frame" x="20" y="140" width="335" height="21.5"/>
+                                    <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="17"/>
                                     <color key="textColor" red="0.20392156862745098" green="0.80392156862745101" blue="0.80392156862745101" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gqV-qq-vPq">
-                                    <rect key="frame" x="20" y="154.5" width="335" height="30"/>
+                                    <rect key="frame" x="20" y="163.5" width="335" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="30" id="8TL-lW-JJo"/>
                                     </constraints>
-                                    <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AMo-AF-kI2">
-                                    <rect key="frame" x="20" y="185.5" width="335" height="1"/>
+                                    <rect key="frame" x="20" y="194.5" width="335" height="1"/>
                                     <color key="backgroundColor" red="0.91764705882352937" green="0.91764705882352937" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="AKc-3E-rVQ"/>
                                     </constraints>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="lifebox" customModuleProvider="target">
-                                    <rect key="frame" x="20" y="201.5" width="335" height="327.5"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BRt-og-nfn" customClass="CaptchaView" customModule="lifeBox_Business" customModuleProvider="target">
+                                    <rect key="frame" x="20" y="210.5" width="335" height="318.5"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="lifebox" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQN-30-H9G" customClass="WhiteButtonWithRoundedCorner" customModule="lifeBox_Business" customModuleProvider="target">
                                     <rect key="frame" x="84.5" y="544" width="206" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="206" id="1Up-VE-wq9"/>
@@ -127,6 +124,7 @@
                     </constraints>
                 </scrollView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="AEn-1F-Urt"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="UVa-ce-PgV" secondAttribute="trailing" id="Fpb-xR-pf8"/>
@@ -137,7 +135,6 @@
                 <constraint firstItem="UVa-ce-PgV" firstAttribute="leading" secondItem="tLh-dZ-YLw" secondAttribute="leading" id="jOz-FL-aeT"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-            <viewLayoutGuide key="safeArea" id="AEn-1F-Urt"/>
             <point key="canvasLocation" x="49" y="-193"/>
         </view>
     </objects>
