--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/SubViews/LoginPhoneMailCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/SubViews/LoginPhoneMailCell.xib
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaBol.ttf">
-            <string>TurkcellSaturaBol</string>
+        <array key="GT-America-LC-Standard-Bold.otf">
+            <string>GTAmericaLC-Bd</string>
         </array>
-        <array key="TurkcellSaturaIta.ttf">
-            <string>TurkcellSaturaIta</string>
+        <array key="GT-America-LC-Standard-Regular-Italic.otf">
+            <string>GTAmericaLC-RgIt</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LoginPhoneMailCellID" id="moK-aw-nkH" customClass="LoginPhoneMailCell" customModule="Depo_LifeTech" customModuleProvider="target">
+        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LoginPhoneMailCellID" id="moK-aw-nkH" customClass="LoginPhoneMailCell" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="moK-aw-nkH" id="g2x-Tp-WmU">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tKB-yh-0xr">
-                        <rect key="frame" x="30" y="13" width="39.5" height="19"/>
+                        <rect key="frame" x="30" y="8.5" width="41.5" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="16"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="16"/>
                         <color key="textColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="text goes here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NsA-Ss-Gng">
-                        <rect key="frame" x="30" y="41" width="275" height="21"/>
+                        <rect key="frame" x="30" y="38" width="275" height="24.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="textColor" red="0.98039215690000003" green="1" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaIta" family="TurkcellSaturaIta" pointSize="18"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-RgIt" family="GT America LC" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                     </textField>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J10-di-aFq" userLabel="InfoButton">
-                        <rect key="frame" x="325" y="41.5" width="20" height="20"/>
+                        <rect key="frame" x="325" y="40.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="0fE-3d-fVd"/>
                             <constraint firstAttribute="height" constant="20" id="LUT-Ss-2aL"/>
@@ -51,14 +50,14 @@
                         </connections>
                     </button>
                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRb-w7-GbM" userLabel="separator">
-                        <rect key="frame" x="30" y="69.5" width="315" height="1"/>
+                        <rect key="frame" x="30" y="70" width="315" height="1"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="GTZ-Ka-cXU"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellowInfoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="zSe-9Y-2hB">
-                        <rect key="frame" x="325" y="41" width="20" height="20"/>
+                        <rect key="frame" x="325" y="40.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="FOM-bh-R0s"/>
                             <constraint firstAttribute="height" constant="20" id="RjC-Ld-N7x"/>
