--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Registration/View/Cells/BaseInputCell/inputCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Registration/View/Cells/BaseInputCell/inputCell.xib
@@ -1,47 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaBol.ttf">
-            <string>TurkcellSaturaBol</string>
+        <array key="GT-America-LC-Standard-Bold.otf">
+            <string>GTAmericaLC-Bd</string>
         </array>
-        <array key="TurkcellSaturaIta.ttf">
-            <string>TurkcellSaturaIta</string>
+        <array key="GT-America-LC-Standard-Regular-Italic.otf">
+            <string>GTAmericaLC-RgIt</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BaseUserInputCellViewID" id="8JA-sl-vp7" customClass="BaseUserInputCellView" customModule="lifebox" customModuleProvider="target">
+        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BaseUserInputCellViewID" id="8JA-sl-vp7" customClass="BaseUserInputCellView" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8JA-sl-vp7" id="si6-BB-f21">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kaA-bU-MIf">
-                        <rect key="frame" x="30" y="13" width="33.5" height="19"/>
+                        <rect key="frame" x="30" y="8.5" width="41.5" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="16"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="16"/>
                         <color key="textColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="text goes here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bka-lu-MHD">
-                        <rect key="frame" x="30" y="41" width="275" height="21"/>
+                        <rect key="frame" x="30" y="38" width="275" height="24.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="textColor" red="0.98039215686274506" green="1" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaIta" family="TurkcellSaturaIta" pointSize="18"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-RgIt" family="GT America LC" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                     </textField>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nYW-Ab-D3w" userLabel="InfoButton">
-                        <rect key="frame" x="325" y="41.5" width="20" height="20"/>
+                        <rect key="frame" x="325" y="40.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="2r0-Yc-Icy"/>
                             <constraint firstAttribute="width" constant="20" id="z2C-OA-6IP"/>
@@ -52,14 +50,14 @@
                         </connections>
                     </button>
                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q2o-0v-uCc" userLabel="separator">
-                        <rect key="frame" x="30" y="69.5" width="315" height="1"/>
+                        <rect key="frame" x="30" y="70" width="315" height="1"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="H7h-9I-TiF"/>
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellowInfoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="UCa-L2-lna">
-                        <rect key="frame" x="325" y="41.5" width="20" height="20"/>
+                        <rect key="frame" x="325" y="40.5" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="44f-Jk-ZuF"/>
                             <constraint firstAttribute="height" constant="20" id="PnK-0a-0q3"/>
