--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Registration/View/Cells/Password/PasswordCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Registration/View/Cells/Password/PasswordCell.xib
@@ -1,47 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="TurkcellSaturaBol.ttf">
-            <string>TurkcellSaturaBol</string>
+        <array key="GT-America-LC-Standard-Bold.otf">
+            <string>GTAmericaLC-Bd</string>
         </array>
-        <array key="TurkcellSaturaIta.ttf">
-            <string>TurkcellSaturaIta</string>
+        <array key="GT-America-LC-Standard-Regular-Italic.otf">
+            <string>GTAmericaLC-RgIt</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PasswordCellID" rowHeight="75" id="0JW-mJ-y1u" customClass="PasswordCell" customModule="lifebox" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PasswordCellID" rowHeight="75" id="0JW-mJ-y1u" customClass="PasswordCell" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0JW-mJ-y1u" id="u9A-kW-mhA">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="O7F-yq-Ufo">
-                        <rect key="frame" x="30" y="14" width="33.5" height="19"/>
+                        <rect key="frame" x="30" y="11" width="41.5" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="16"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KEc-D9-OdG">
-                        <rect key="frame" x="30" y="41" width="275" height="21"/>
+                        <rect key="frame" x="30" y="39.5" width="275" height="23"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" name="TurkcellSaturaIta" family="TurkcellSaturaIta" pointSize="18"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-RgIt" family="GT America LC" pointSize="18"/>
                         <textInputTraits key="textInputTraits" returnKeyType="next" secureTextEntry="YES"/>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TeE-iR-lwj">
-                        <rect key="frame" x="300" y="5.5" width="45" height="34"/>
+                        <rect key="frame" x="300" y="5" width="45" height="34"/>
                         <state key="normal" title="Show">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -53,14 +51,14 @@
                         </connections>
                     </button>
                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nba-vB-kTX" userLabel="separator">
-                        <rect key="frame" x="30" y="69.5" width="315" height="1"/>
+                        <rect key="frame" x="30" y="70" width="315" height="1"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="c3d-gs-8bp"/>
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dU-d9-WmH" userLabel="InfoButton">
-                        <rect key="frame" x="325" y="41.5" width="20" height="20"/>
+                        <rect key="frame" x="325" y="41" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="oby-ow-5fQ"/>
                             <constraint firstAttribute="height" constant="20" id="syh-F5-xiy"/>
@@ -71,7 +69,7 @@
                         </connections>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellowInfoIcon" translatesAutoresizingMaskIntoConstraints="NO" id="KRp-S9-j07">
-                        <rect key="frame" x="325" y="41.5" width="20" height="20"/>
+                        <rect key="frame" x="325" y="41" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="56D-fb-TB8"/>
                             <constraint firstAttribute="width" constant="20" id="RSZ-yy-0an"/>
